--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="lemonjam.dragonjump"
+      package="com.example.longzhiyue"
       android:versionCode="1"
       android:versionName="1.0"
       android:installLocation="auto">
